# Spotify-Lyrics

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/: async.rs  sync.rs
src/: lib.rs
